<resources>
  <string name="app_name">ESP Connect</string>
  <string name="project_url">https://gitlab.com/umranium/EspConnect</string>
  <string name="action_settings">Settings</string>
  <string name="dialog_course_location_rationale_message">Accessing WiFi scan results can allow an app to determine
    your location, however, this app requires to access the WiFi scan results to automatically find the NodeMCU.
    Proceed to permission dialog box?
  </string>
  <string name="dialog_course_location_rationale_title">Permission to course location required</string>
  <string name="no_course_location_permission_title">Unable to continue</string>
  <string name="no_course_location_permission_msg">App has not been granted course location permission. Please grant the permission to continue.</string>

  <string name="welcome_btn_start">Find ESP8266</string>
  <string name="welcome_txt_title">Welcome</string>
  <string name="welcome_txt_description">Please turn on your ESP8266.\nWhen it is on, press the configure button.
  </string>
  <string name="welcome_link_to_more_info"><a href=''>Find out more about this app</a></string>

  <string name="title_activity_scanning">Finding ESP8266</string>
  <string name="scanning_title">Searching for ESP8266</string>
  <string name="scanning_description">Please hold on as we search for your ESP8266…</string>

  <string name="scanning_error_noap_title">Unable to find any ESP8266 nodes</string>
  <string name="scanning_error_noap_description">Unable to find any ESP8266 nodes.\nAre you sure your ESP8266 is turned on and in the configuration mode?</string>
  <string name="scanning_generic_error_title">Error scanning for ESP8266 nodes</string>
  <string name="scanning_generic_error_msg">An error occurred while scanning for ESP8266 nodes.\nPlease try again.</string>

  <string name="title_activity_access_point_list">Please select your ESP8266 node from the nodes found:</string>

  <string name="title_activity_connecting">Connecting to ESP8266</string>
  <string name="connecting_title">Connecting to %s</string>
  <string name="connecting_description">Please hold on as we connect to %s…</string>
  <string name="connecting_generic_error_title">Error connecting to ESP8266</string>
  <string name="connecting_generic_error_msg">An error occurred while connecting to your ESP8266.</string>
  <string name="connecting_connection_error_msg">Unable to maintain a connection to the ESP8266 long enough to check the WiFi networks it sees.</string>

  <string name="title_activity_configure">Configure your ESP8266</string>
  <string name="configure_hint_ssid">WiFi access point</string>
  <string name="configure_hint_password">Password</string>
  <string name="configure_hint_no_password">Configure without a password</string>
  <string name="configure_title_details">Please enter the WiFi details to configure your ESP8266 with:</string>
  <string name="configure_title_ssids">WiFi access points visible to your ESP8266:</string>
  <string name="configure_btn_submit">Submit</string>
  <string name="configure_error_blank_ssid">Please enter a WiFi access point</string>
  <string name="configure_error_blank_password">Please enter a password</string>
  <string name="configure_link_to_more_info"><a href=''>Find out more about this ESP8266</a></string>

  <string name="title_activity_configuring">Configuring ESP8266</string>
  <string name="configuring_title">Configuring your ESP8266</string>
  <string name="configuring_generic_error_title">Error configuring ESP8266</string>
  <string name="configuring_generic_error_msg">An error occurred while configuring your ESP8266.\nPlease try again.</string>
  <string name="configuring_connection_error_msg">Unable to maintain a connection to the ESP8266 long enough to configure it.</string>
  <string name="configuring_esp_save">Sending credentials to your ESP8266…</string>
  <string name="configuring_esp_save_failed">Configuring your ESP8266 has failed.\nPlease try again.</string>
  <string name="configuring_esp_state_check">Please hold on as we configure your ESP8266…</string>
  <string name="configuring_esp_state_check_failed">Your ESP8266 was configured successfully but verifying it\'s state failed.</string>
  <string name="configuring_esp_close">Turning off your ESP8266\'s configuration mode…</string>
  <string name="configuring_esp_close_failed">Your ESP8266 was configured successfully but turning off it\'s configuration mode failed.</string>
  <string name="configuring_esp_unable_to_connect">Your ESP8266 was unable to connect to %s.\nAre you sure the password was correct?</string>

  <string name="title_activity_scan">Find ESP8266</string>
  <string name="title_activity_configurer">Configure ESP8266</string>
  <string name="title_activity_error">Oops!</string>

  <string name="title_activity_end">ESP8266 Configured</string>
  <string name="end_txt_title">All done!</string>
  <string name="end_txt_description">Your ESP8266 has been successfully configured to connect to the WiFi network %s.</string>
  <string name="end_btn_another">Configure another</string>
  <string name="end_btn_exit">Exit</string>

  <string name="wificonn_error_msg_unable_to_enable">Unable to enable network</string>
  <string name="wificonn_error_msg_unable_to_disconnect">Unable to disconnect</string>
  <string name="wificonn_error_msg_unable_to_add_network">Unable to add the WiFi network</string>

  <string name="analytics_screen_welcome">welcome</string>
  <string name="analytics_screen_scanning">scanning</string>
  <string name="analytics_screen_access_point_list">access-point-list</string>
  <string name="analytics_screen_connecting">connecting</string>
  <string name="analytics_screen_configure">configure</string>
  <string name="analytics_screen_configuring">configuring</string>
  <string name="analytics_screen_end">end</string>
  <string name="analytics_screen_error">error</string>

  <string name="analytics_event_welcome">welcome</string>
  <string name="analytics_event_welcome_find_out_more">find-out-more</string>
  <string name="analytics_event_scanned_access_points">scanned-access-points</string>
  <string name="analytics_event_scanned_access_points_results">scanned-access-points-results</string>
  <string name="analytics_event_permission_location">permission-location</string>
  <string name="analytics_event_permission_given">given</string>
  <string name="analytics_event_permission_rejected">rejected</string>
  <string name="analytics_event_permission_rejected_perm">rejected-permanently</string>
  <string name="analytics_event_access_point_state">access-point-off</string>
  <string name="analytics_event_access_point_state_on">on</string>
  <string name="analytics_event_access_point_state_off">off</string>
  <string name="analytics_event_access_point_state_agreed_turn_off">agreed</string>
  <string name="analytics_event_access_point_state_disagreed_to_turn_off">disagreed</string>
  <string name="analytics_event_wifi_state">wifi-state</string>
  <string name="analytics_event_wifi_state_on">on</string>
  <string name="analytics_event_wifi_state_off">off</string>
  <string name="analytics_event_wifi_state_agreed_to_turn_on">agreed</string>
  <string name="analytics_event_wifi_state_disagreed_to_turn_on">disagreed</string>
  <string name="analytics_event_wifi_state_could_turn_on">could-turn-on</string>
  <string name="analytics_event_wifi_state_could_not_turn_on">could-not-turn-on</string>
  <string name="analytics_event_configure">configure</string>
  <string name="analytics_event_configure_find_out_more">find-out-more</string>
  <string name="analytics_event_configuration">configuration</string>
  <string name="analytics_event_configuration_save_success">save-success</string>
  <string name="analytics_event_configuration_state_connected">state-connected</string>
  <string name="analytics_event_configuration_state_disconnected">state-disconnected</string>
  <string name="analytics_event_configuration_close_success">close-success</string>
  <string name="analytics_event_end">end</string>
  <string name="analytics_event_end_back_pressed">end-back-pressed</string>
  <string name="analytics_event_end_configure_another">configure-another</string>
  <string name="analytics_event_end_exit">exit</string>

  <string name="turn_wifi_on_request_dlg_title">Your WiFi is turned off</string>
  <string name="turn_wifi_on_request_dlg_msg">Your WiFi needs to be on to scan for ESP nodes. Turn WiFi on?</string>
  <string name="turn_wifi_on_request_dlg_pos_btn">Turn WiFi On</string>
  <string name="turn_wifi_on_request_dlg_neg_btn">Cancel scanning</string>

  <string name="turn_access_point_off_request_dlg_title">WiFi access point is current on</string>
  <string name="turn_access_point_off_request_dlg_msg">Your phone\'s access point can not be on while scanning for ESP nodes. Go to settings to turn off access point?</string>
  <string name="turn_access_point_off_request_dlg_pos_btn">Go to settings</string>
  <string name="turn_access_point_off_request_dlg_neg_btn">Cancel scanning</string>

  <string name="wifi_turned_on">WiFi turned on</string>
  <string name="wifi_could_not_be_turned_on">Unable to turn WiFi on</string>

</resources>
