<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".presentation.display.config.ConfigureActivity">

  <TextView
    android:id="@+id/txt_title_details"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:layout_marginBottom="@dimen/standard_item_spacing"
    android:text="@string/configure_title_details"/>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standard_item_spacing">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin">

      <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_txt_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
          android:id="@+id/edt_ssid"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/configure_hint_ssid"
        />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
          android:id="@+id/edt_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:hint="@string/configure_hint_password"
        />
      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_btn_submit"
      />

    </LinearLayout>

  </android.support.v7.widget.CardView>

  <TextView
    android:id="@+id/txt_title_ssids"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/standard_item_spacing"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:text="@string/configure_title_ssids"/>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/ssid_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
  </android.support.v7.widget.RecyclerView>

</LinearLayout>
